out_utf8.txt
node.exe : [0m[7m[1m[31m FAIL 
[39m[22m[27m[0m [2mtest/[22m[
1mcontacts-import.e2e-spec.ts[22m
At C:\Program 
Files\nodejs\npx.ps1:29 char:3
+   & $NODE_EXE $NPX_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSp 
   ecified: ([0m[7m[1m[3...2e-  
  spec.ts[22m:String) [], Remote   
 Exception
    + FullyQualifiedErrorId : Nativ 
   eCommandError
 
  [1m [22mTest suite failed to 
run

    [1m[31mJest encountered an 
unexpected token[39m[22m

    Jest failed to parse a file. 
This happens e.g. when your code or 
its dependencies use non-standard 
JavaScript syntax, or when Jest is 
not configured to support such 
syntax.

    Out of the box Jest supports 
Babel, which will be used to 
transform your files into valid JS 
based on your Babel configuration.

    By default "node_modules" 
folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use 
ECMAScript Modules, see [4mhttps://
jestjs.io/docs/ecmascript-modules[2
4m for how to enable it.
      If you are trying to use 
TypeScript, see [4mhttps://jestjs.i
o/docs/getting-started#using-typescr
ipt[24m
      To have some of your 
"node_modules" files transformed, 
you can specify a custom 
[1m"transformIgnorePatterns"[22m 
in your config.
      If you need a custom 
transformation, specify a 
[1m"transform"[22m option in your 
config.
      If you simply want to mock 
your non-JS modules (e.g. binary 
assets) you can stub them out with 
the [1m"moduleNameMapper"[22m 
config option.

    You'll find more details and 
examples of these config options in 
the docs:
    [36mhttps://jestjs.io/docs/conf
iguration[39m
    For information about custom 
transformations, see:
    [36mhttps://jestjs.io/docs/code
-transformation[39m

    [1m[31mDetails:[39m[22m

    C:\Users\ROG STRIX\Documents\Pla
yground\api\node_modules\@scure\base
\index.js:326
    export const utils = {
    ^^^^^^

    SyntaxError: Unexpected token 
'export'

    [0m [90m  6 |[39m } 
[36mfrom[39m [32m'@nestjs/common'
[39m[33m;[39m
     [90m  7 |[39m 
[36mimport[39m [33m*[39m 
[36mas[39m bcrypt [36mfrom[39m 
[32m'bcrypt'[39m[33m;[39m
    [31m[1m>[22m[39m[90m  8 
|[39m [36mimport[39m { 
generateSecret[33m,[39m 
generateURI[33m,[39m verify } 
[36mfrom[39m 
[32m'otplib'[39m[33m;[39m
     [90m    |[39m 
[31m[1m^[22m[39m
     [90m  9 |[39m 
[36mimport[39m [33m*[39m 
[36mas[39m [33mQRCode[39m 
[36mfrom[39m 
[32m'qrcode'[39m[33m;[39m
     [90m 10 |[39m 
[36mimport[39m { 
[33mEncryptionService[39m } 
[36mfrom[39m [32m'../../../common
/services/encryption.service'[39m[
33m;[39m
     [90m 11 |[39m 
[36mimport[39m { 
[33mPrismaService[39m } 
[36mfrom[39m [32m'../../../databa
se/prisma/prisma.service'[39m[33m;
[39m[0m

      [2mat 
Runtime.createScriptFromCode ([22m.
./node_modules/jest-runtime/build/in
dex.js[2m:1314:40)[22m
      [2mat Object.<anonymous> ([2
2m../node_modules/@otplib/plugin-bas
e32-scure/src/index.ts[2m:1:1)[22m
      [2mat Object.<anonymous> ([2
2m../node_modules/otplib/src/functio
nal.ts[2m:13:8)[22m
      [2mat Object.<anonymous> ([2
2m../src/modules/auth/services/mfa.s
ervice.ts[2m:8:1)[22m
      [2mat Object.<anonymous> ([2
2m../src/modules/auth/auth.service.t
s[2m:20:1)[22m
      [2mat Object.<anonymous> ([2
2m../src/modules/auth/auth.controlle
r.ts[2m:24:1)[22m
      [2mat Object.<anonymous> ([2
2m../src/modules/auth/auth.module.ts
[2m:9:1)[22m
      [2mat Object.<anonymous> ([2
2m../src/app.module.ts[2m:20:1)[22
m
      [2mat Object.<anonymous> ([2
2m[0m[36mcontacts-import.e2e-spec.
ts[39m[0m[2m:7:1)[22m

[1mTest Suites: [22m[1m[31m1 
failed[39m[22m, 1 total
[1mTests:       [22m0 total
[1mSnapshots:   [22m0 total
[1mTime:[22m        3.428 s
[2mRan all test suites[22m[2m 
matching [22mtest/contacts-import.e
2e-spec.ts[2m.[22m
